--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
     <main class="content">
 
         <div id="home" class="page">
-            <h2>Content Page</h2>
-            <p>blank information</p>
+            <h2></h2>
+            <p><h2></h2></p>
         </div>
 
-        <div id="menu2" class="page"><h2> Content</h2></div>
-        <div id="menu3" class="page"><h2> Content</h2></div>
-        <div id="menu4" class="page"><h2> Content</h2></div>
+        <div id="menu2" class="page"><h2>We are 2nd Year College Currently taking Bachelor of Science in Information Technology </h2></div>
+        <div id="menu3" class="page"><h2>Novaliches, Bayan</h2></div>
+        <div id="menu4" class="page"><h2>BSIT-(22015)</h2></div>
 
        
         <div id="profiles" class="page">
@@ -48,22 +48,22 @@
                 </div>
 
                 <div class="person">
-                    <img src="images/Cat.jpeg">
+                    <img src="images/594318901_800245046337473_3103241223957173348_n (1).jpg">
                     <a href="#p2">JANNJAY</a>
                 </div>
 
                 <div class="person">
-                    <img src="images/OIP.webp">
+                    <img src="images/Cat.jpeg">
                     <a href="#p3">JUNIEL</a>
                 </div>
 
                 <div class="person">
-                    <img src="images/Cat-05.jpg">
+                    <img src="images/594451531_1300054358593102_8773975887027280456_n.jpg">
                     <a href="#p4">CARLA MAE</a>
                 </div>
 
                 <div class="person">
-                    <img src="images/iD8Mvr7Fp84kP4WSdjELAc-1200-80.jpg">
+                    <img src="images/591322114_2299907243825313_7461438940705443791_n.jpg">
                     <a href="#p5">DANTE</a>
                 </div>
 
@@ -90,8 +90,16 @@ They call me chad<br><br>
 <div id="p2" class="modal">
     <div class="modal-content">
         <h2>JANNJAY MENDOZA</h2>
-        <img src="images/Cat.jpeg">
-        <p>Information goes here.</p>
+        <img src="images/594318901_800245046337473_3103241223957173348_n (1).jpg">
+        <p>Bachelor of science in Information Technology<br><br>
+Birthdate: Dec 8, 2004<br><br>
+Nickname: Jay<br><br>
+Matcha Lover<br>
+IDGF<br>
+Strangerthings S5<br>
+Congrats new RN<br>
+SZA<br>
+Frank Ocean</p>
         <a href="#profiles" class="close">Close</a>
     </div>
 </div>
@@ -99,8 +107,10 @@ They call me chad<br><br>
 <div id="p3" class="modal">
     <div class="modal-content">
         <h2>JUNIEL VILLANUEVA</h2>
-        <img src="images/OIP.webp">
-        <p>Information goes here.</p>
+        <img src="images/Cat.jpeg">
+        <p>Bachelor of science in Information Technology<br><br>
+Bday: june 6, 2005<br><br>
+Nickname: nel</p>
         <a href="#profiles" class="close">Close</a>
     </div>
 </div>
@@ -108,8 +118,10 @@ They call me chad<br><br>
 <div id="p4" class="modal">
     <div class="modal-content">
         <h2>CARLA MAE AGDIPPA</h2>
-        <img src="images/Cat-05.jpg">
-        <p>Information goes here.</p>
+        <img src="images/594451531_1300054358593102_8773975887027280456_n.jpg">
+        <p>Bachelor of science in Information Technology<bR><br>
+Birthdate: Dec 18, 2005<br><br>
+Nickname: Carla</p>
         <a href="#profiles" class="close">Close</a>
     </div>
 </div>
@@ -117,8 +129,13 @@ They call me chad<br><br>
 <div id="p5" class="modal">
     <div class="modal-content">
         <h2>DANTE ANGELIO</h2>
-        <img src="images/iD8Mvr7Fp84kP4WSdjELAc-1200-80.jpg">
-        <p>Information goes here.</p>
+        <img src="images/591322114_2299907243825313_7461438940705443791_n.jpg">
+        <p>senior high top student (achiever)<br><br>
+birthdate: April 18 2006<br><br>
+my nickname is Dan<br><br>
+I also listen to taylor swift,beabadoobe,<br>
+niki, daniel ceasar and clairo <br>
+</p>
         <a href="#profiles" class="close">Close</a>
     </div>
 </div>
